--- a/tabelas.html
+++ b/tabelas.html
@@ -6,6 +6,7 @@
     <title>Tabelas</title>
 </head>
 <body>
-    
+    <h1>DCC202 Semana 05: Tabelas</h1>
+    <p>As tabelas indicam dados multidimensionais. <b>Não</b> use tabelas para fazer listas!</p>
 </body>
 </html>
