--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
 </head>
 <body>
     <h1>DCC202 Semana 05</h1>
-    <p>Nesta semana aprenderemos a fazer ligações entre páginas, como fazer listas e tabelas.</p>
-    <a href="listas.html">Listas</a>
-    <a href="tabelas.html">Tabelas</a>
+    <p>Essa é a página principal. Também temos a página sobre <a href="listas.html">listas</a> e <a href="tabelas.html">tabelas</a>.</p>
     
 </body>
 </html>
