--- a/listas.html
+++ b/listas.html
@@ -6,8 +6,8 @@
     <title>Listas</title>
 </head>
 <body>
-    <h1>DCC202 Semana 05: Listas</h1>
-    <p>Listas pemitem organizar elementos.</p>
+    <h1><a href="index.html">DCC202 Semana 05</a>: Listas</h1>
+    <p>Listas permitem organizar elementos. É preferível usar listas ao invés de <a href="tabelas.html">tabelas</a>, caso o conteúdo seja unidimensional</p>
     <h3>Listas não ordenadas</h3>
     <h3>Listas ordenadas</h3>
     <h3>Listas de definição</h3>
