adicionada navegação nos documentos

--- a/index.html
+++ b/index.html
@@ -6,8 +6,16 @@
     <title>Página principal</title>
 </head>
 <body>
-    <h1>DCC202 Semana 05</h1>
-    <p>Essa é a página principal. Também temos a página sobre <a href="listas.html">listas</a> e <a href="tabelas.html">tabelas</a>.</p>
-    
+    <main>
+        <h1>DCC202 Semana 05</h1>
+        <p>Essa é a página principal. Também temos a página sobre <a href="listas.html">listas</a> e <a href="tabelas.html">tabelas</a>.</p>
+    </main>
+    <aside>
+        <nav>
+            <a href="index.html">Página principal</a>
+            <a href="listas.html">Listas</a>
+            <a href="tabelas.html">Tabelas</a>
+        </nav>
+    </aside>
 </body>
 </html>
