--- a/listas.html
+++ b/listas.html
@@ -6,11 +6,21 @@
     <title>Listas</title>
 </head>
 <body>
-    <h1><a href="index.html">DCC202 Semana 05</a>: Listas</h1>
-    <p>Listas permitem organizar elementos. É preferível usar listas ao invés de <a href="tabelas.html">tabelas</a>, caso o conteúdo seja unidimensional</p>
-    <h3>Listas não ordenadas</h3>
-    <h3>Listas ordenadas</h3>
-    <h3>Listas de definição</h3>
+    <main>
+        <h1><a href="index.html">DCC202 Semana 05</a>: Listas</h1>
+        <p>Listas permitem organizar elementos. É preferível usar listas ao invés de <a href="tabelas.html">tabelas</a>, caso o conteúdo seja unidimensional</p>
+        <h3>Listas não ordenadas</h3>
+        <h3>Listas ordenadas</h3>
+        <h3>Listas de definição</h3>
+    </main>
+
+    <aside>
+        <nav>
+            <a href="index.html">Página principal</a>
+            <a href="listas.html">Listas</a>
+            <a href="tabelas.html">Tabelas</a>
+        </nav>
+    </aside>
     
 </body>
 </html>
