--- a/tabelas.html
+++ b/tabelas.html
@@ -6,7 +6,16 @@
     <title>Tabelas</title>
 </head>
 <body>
-    <h1><a href="index.html">DCC202 Semana 05</a>: Tabelas</h1>
-    <p>As tabelas indicam dados multidimensionais. <b>Não</b> use tabelas para fazer <a href="listas.html">listas</a>!</p>
+    <main>
+        <h1><a href="index.html">DCC202 Semana 05</a>: Tabelas</h1>
+        <p>As tabelas indicam dados multidimensionais. <b>Não</b> use tabelas para fazer <a href="listas.html">listas</a>!</p>
+    </main>
+    <aside>
+        <nav>
+            <a href="index.html">Página principal</a>
+            <a href="listas.html">Listas</a>
+            <a href="tabelas.html">Tabelas</a>
+        </nav>
+    </aside>
 </body>
 </html>
