pico css inserido

--- a/index.html
+++ b/index.html
@@ -1,21 +1,28 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Página principal</title>
-</head>
-<body>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css"
+    />
+  </head>
+  <body>
     <main>
-        <h1>DCC202 Semana 05</h1>
-        <p>Essa é a página principal. Também temos a página sobre <a href="listas.html">listas</a> e <a href="tabelas.html">tabelas</a>.</p>
+      <h1>DCC202 Semana 05</h1>
+      <p>
+        Essa é a página principal. Também temos a página sobre
+        <a href="listas.html">listas</a> e <a href="tabelas.html">tabelas</a>.
+      </p>
     </main>
     <aside>
-        <nav>
-            <a href="index.html">Página principal</a>
-            <a href="listas.html">Listas</a>
-            <a href="tabelas.html">Tabelas</a>
-        </nav>
+      <nav>
+        <a href="index.html">Página principal</a>
+        <a href="listas.html">Listas</a>
+        <a href="tabelas.html">Tabelas</a>
+      </nav>
     </aside>
-</body>
+  </body>
 </html>
